--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">nickey</a>
+    <a href="#" class="logo">Nike</a>
 
     <nav class="navbar ">
         <a href="#home">home</a>
