--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>responsive ecommerce website</title>
+    <title>Lontong Online</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -24,7 +24,7 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">Nike</a>
+    <a href="#" class="logo">Lontong/Ketupat</a>
 
     <nav class="navbar ">
         <a href="#home">home</a>
@@ -50,7 +50,7 @@
     <div class="slide-container active">
         <div class="slide">
             <div class="content">
-                <span>nike red shoes</span>
+                <span>Ketupat Gulai Paku</span>
                 <h3>nike metcon shoes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat maiores et eos eaque veritatis aut laboriosam earum dolorem iste atque.</p>
                 <a href="#" class="btn">add to cart</a>
@@ -133,7 +133,7 @@
 
 <section class="products" id="products">
 
-    <h1 class="heading"> latest <span>products</span> </h1>
+    <h1 class="heading"> <span>Categories</span> </h1>
 
     <div class="box-container">
 
