--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <nav class="navbar ">
         <a href="#home">home</a>
+        <a href="#categories">categories</a>
         <a href="#products">products</a>
-        <a href="#featured">featured</a>
         <a href="#review">review</a>
     </nav>
 
@@ -438,17 +438,17 @@
 
         <div class="box">
             <h3>our stores</h3>
-            <a href="#">india</a>
-            <a href="#">USA</a>
-            <a href="#">japan</a>
-            <a href="#">paris</a>
+            <a href="#">Pekanbaru</a>
+            <a href="#">Padang</a>
+            <a href="#">Bukittinggi</a>
+            <a href="#">Medan</a>
         </div>
 
         <div class="box">
             <h3>quick links</h3>
             <a href="#">home</a>
             <a href="#">products</a>
-            <a href="#">featured</a>
+            <a href="#">products</a>
             <a href="#">review</a>
         </div>
 
@@ -465,7 +465,7 @@
             <a href="#">facebook</a>
             <a href="#">twitter</a>
             <a href="#">instagram</a>
-            <a href="#">linkedin</a>
+            <a href="#">pinterest</a>
         </div>
 
         <div class="credit">created by <span> Arief Syaifudin </span> | all rights reserved</div>
