--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/pic1.png" alt="">
+            <img src="images/pic.1.jpg" alt="">
             <h3>Adelia</h3>
             <p>Recommended sarapan pagi disini</p>
             <div class="stars">
@@ -391,7 +391,7 @@
         </div>
 
         <div class="box">
-            <img src="images/pic2.png" alt="">
+            <img src="images/pic.jpg" alt="">
             <h3>Sutarman</h3>
             <p>Mantap</p>
             <div class="stars">
@@ -404,7 +404,7 @@
         </div>
 
         <div class="box">
-            <img src="images/pic3.png" alt="">
+            <img src="images/pic.2.jpg" alt="">
             <h3>Sutijan</h3>
             <p>Enak Banget Cuyy</p>
             <div class="stars">
